# world-of-wasi-demo

./: .gitignore  README.md
echo-client/: Cargo.toml
echo-client/src/: lib.rs
echo-server/: Cargo.toml
echo-server/src/: lib.rs
